--- a/index.html
+++ b/index.html
@@ -7,6 +7,39 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    
+    <header>
+        <div class="container">
+            <div class="header">
+                <a href="#" class="logo">
+                    <img src="img/logo.svg" alt="logo">
+                </a>
+                <nav>
+                    <ul class="header__nav">
+                        <li class="header__item"><a class="header__link" href="">Home</a></li>
+                        <li class="header__item"><a class="header__link" href="">Our Projects</a></li>
+                        <li class="header__item"><a class="header__link" href="">Blog</a></li>
+                        <li class="header__item"><a class="header__link" href="">Contact</a></li>
+                        <li class="header__item"><button class="header__search"><img src="img/search.svg" alt="button"></button></li>
+                    </ul>
+                </nav>
+            </div>
+        </div>
+    </header>
+
+
+    <footer>
+        <div class="container">
+            <div class="footer">
+                <a href="#" class="logo">
+                    <img src="img/logo.svg" alt="logo">
+                </a>
+                <div class="footer-block">
+                    <p class="footer-text"></p>
+                    <a href="mailto"></a>
+                    <a href="tel"></a>
+                </div>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
