--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
                 <a href="#" class="logo">
                     <img src="img/logo.svg" alt="logo">
                 </a>
-                <div class="footer-block">
-                    <p class="footer-text"></p>
-                    <a href="mailto"></a>
-                    <a href="tel"></a>
+                <div class="footer__block">
+                    <p class="footer__text">55 East Birchwood Ave. Brooklyn, New York 11201</p>
+                    <a class="footer__mail" href="mailto:melman69rus@mail.ru">melman69rus@mail.ru</a>
+                    <a class="footer__tel" href="tel:+79263806245">(926) 380-6245</a>
                 </div>
             </div>
         </div>
