--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                         <li class="header__item"><a class="header__link" href="">Our Projects</a></li>
                         <li class="header__item"><a class="header__link" href="">Blog</a></li>
                         <li class="header__item"><a class="header__link" href="">Contact</a></li>
-                        <li class="header__item"><button class="header__search"><img src="img/search.svg" alt="button"></button></li>
+                        <li class="header__item"><button class="header__search" onclick="openModal()"><img src="img/search.svg" alt="button"></button></li>
                     </ul>
                 </nav>
             </div>
@@ -27,19 +27,31 @@
     </header>
 
 
-    <footer>
+    <footer class="bg">
         <div class="container">
             <div class="footer">
                 <a href="#" class="logo">
                     <img src="img/logo.svg" alt="logo">
                 </a>
-                <div class="footer__block">
-                    <p class="footer__text">55 East Birchwood Ave. Brooklyn, New York 11201</p>
-                    <a class="footer__mail" href="mailto:melman69rus@mail.ru">melman69rus@mail.ru</a>
-                    <a class="footer__tel" href="tel:+79263806245">(926) 380-6245</a>
+                <div class="footer__info">
+                    <p>55 East Birchwood Ave. <br> Brooklyn, New York 11201</p>
+                    <a href="mailto:melman69rus@mail.ru">melman69rus@mail.ru</a>
+                    <a href="tel:+79263806245">(926) 380-6245</a>
+                </div>
+            </div>
+        </div> 
+    </footer>
+    <div class="overlay" id="overlay">
+        <div class="modal-search">
+            <div class="container">
+                <div class="modal-search__content">
+                    <input type="text" class="modal-search__input" placeholder="Search">
+                    <button type="submit" class="modal-search__btn"></button>
+                    <button type="button" class="modal-search__close" onclick="closeModal()"></button>
                 </div>
             </div>
         </div>
-    </footer>
+    </div>
+    <script src="script/script.js"></script>
 </body>
 </html>
