--- a/index.html
+++ b/index.html
@@ -26,6 +26,13 @@
         </div>
     </header>
 
+    <div class="hero">
+        <img class="hero__img" src="img/bg.jpg" alt="">
+        <div class="container">
+           <h1 class="hero__title">Let Your Home <br> Be Unique</h1>
+           <p class="hero__text">There are many variations of the passages of lorem Ipsum fromavailable,variations of the passages.</p>
+        </div>
+    </div>
 
     <footer class="bg">
         <div class="container">
