--- a/index.html
+++ b/index.html
@@ -26,13 +26,36 @@
         </div>
     </header>
 
-    <div class="hero">
-        <img class="hero__img" src="img/bg.jpg" alt="">
-        <div class="container">
-           <h1 class="hero__title">Let Your Home <br> Be Unique</h1>
-           <p class="hero__text">There are many variations of the passages of lorem Ipsum fromavailable,variations of the passages.</p>
+    <section class="hero__section">
+        <div class="hero">
+            <img class="hero__img" src="img/bg.jpg" alt="">
+            <div class="container">
+               <h1 class="hero__title">Let Your Home <br> Be Unique</h1>
+               <p class="hero__text">There are many variations of the passages of lorem Ipsum fromavailable,variations of the passages.</p>
+            </div>
         </div>
-    </div>
+    </section>
+
+    <section>
+        <div class="container">
+            <div class="about">
+                <div class="about__text">
+                    <h2 class="about__title">We Create The Art Of Stylish Living Stylishly</h2>
+                    <p>It is a long established fact that a reader will be distracted by the of readable content of a page 
+                        when lookings at its layouts the points of using 
+                        that it has a more-or-less normal.</p>
+                    <div class="about__tel">
+                        <button type="submit" class="about__btn"></button>
+                        <p class="about__call">012345678 <br> Call Us Anytime</p>
+                    </div>
+                    <a href=""></a>
+                </div>
+                <div class="about__thumb">
+                    <img class="about__img" src="img/about-img.jpg" alt="">
+                </div>
+            </div>
+        </div>
+    </section>
 
     <footer class="bg">
         <div class="container">
@@ -41,13 +64,14 @@
                     <img src="img/logo.svg" alt="logo">
                 </a>
                 <div class="footer__info">
-                    <p>55 East Birchwood Ave. <br> Brooklyn, New York 11201</p>
+                    <p>55 East Birchwood Ave. Brooklyn, New York 11201</p>
                     <a href="mailto:melman69rus@mail.ru">melman69rus@mail.ru</a>
                     <a href="tel:+79263806245">(926) 380-6245</a>
                 </div>
             </div>
         </div> 
     </footer>
+
     <div class="overlay" id="overlay">
         <div class="modal-search">
             <div class="container">
