--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@
         </div>
     </section>
 
-    <section>
+    <section class="about__section">
         <div class="container">
             <div class="about">
-                <div class="about__text">
+                <div class="about__box">
                     <h2 class="about__title">We Create The Art Of Stylish Living Stylishly</h2>
                     <p>It is a long established fact that a reader will be distracted by the of readable content of a page 
                         when lookings at its layouts the points of using 
@@ -48,7 +48,7 @@
                         <button type="submit" class="about__btn"></button>
                         <p class="about__call">012345678 <br> Call Us Anytime</p>
                     </div>
-                    <a href=""></a>
+                    <a href="#" class="link">Get Free Estimate</a>
                 </div>
                 <div class="about__thumb">
                     <img class="about__img" src="img/about-img.jpg" alt="">
