--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Interno</title>
+    <link rel="stylesheet" href="css/swiper-bundle.min.css"/>
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -40,7 +41,7 @@
         <div class="container">
             <div class="about">
                 <div class="about__box">
-                    <h2 class="about__title">We Create The Art Of Stylish Living Stylishly</h2>
+                    <h2 class="title">We Create The Art Of Stylish Living Stylishly</h2>
                     <p>It is a long established fact that a reader will be distracted by the of readable content of a page 
                         when lookings at its layouts the points of using 
                         that it has a more-or-less normal.</p>
@@ -53,6 +54,21 @@
                 <div class="about__thumb">
                     <img class="about__img" src="img/about-img.jpg" alt="">
                 </div>
+            </div>
+            <div class="swiper swiperFeedback">
+                <div class="swiper-wrapper">
+                  <div class="swiper-slide">Slide 1</div>
+                  <div class="swiper-slide">Slide 2</div>
+                  <div class="swiper-slide">Slide 3</div>
+                  <div class="swiper-slide">Slide 4</div>
+                  <div class="swiper-slide">Slide 5</div>
+                  <div class="swiper-slide">Slide 6</div>
+                  <div class="swiper-slide">Slide 7</div>
+                  <div class="swiper-slide">Slide 8</div>
+                  <div class="swiper-slide">Slide 9</div>
+                </div>
+                <div class="swiper-button-next"></div>
+                <div class="swiper-button-prev"></div>
             </div>
         </div>
     </section>
@@ -83,6 +99,7 @@
             </div>
         </div>
     </div>
+    <script src="script/swiper-bundle.min.js"></script>
     <script src="script/script.js"></script>
 </body>
 </html>
