--- a/index.html
+++ b/index.html
@@ -26,7 +26,6 @@
             </div>
         </div>
     </header>
-
     <section class="hero__section">
         <div class="hero">
             <img class="hero__img" src="img/bg.jpg" alt="">
@@ -36,7 +35,6 @@
             </div>
         </div>
     </section>
-
     <section class="about__section">
         <div class="container">
             <div class="about">
@@ -57,22 +55,77 @@
             </div>
             <div class="swiper swiperFeedback">
                 <div class="swiper-wrapper">
-                  <div class="swiper-slide">Slide 1</div>
-                  <div class="swiper-slide">Slide 2</div>
-                  <div class="swiper-slide">Slide 3</div>
-                  <div class="swiper-slide">Slide 4</div>
-                  <div class="swiper-slide">Slide 5</div>
-                  <div class="swiper-slide">Slide 6</div>
-                  <div class="swiper-slide">Slide 7</div>
-                  <div class="swiper-slide">Slide 8</div>
-                  <div class="swiper-slide">Slide 9</div>
+                  <div class="swiper-slide">
+                    <h2 class="title title__slide">What our Customers says...</h2>
+                    <img src="img/kovicki.svg" alt="">
+                    <p class="swiper-text">I like an interior that defies labeling. I don't really want someone to walk into a room and know that I did it</p>
+                    <p class="swiper-author">BUNNY WILLIAMS</p>
+                  </div>
+                  <div class="swiper-slide">
+                    <h2 class="title title__slide">What our Customers says...</h2>
+                    <img src="img/kovicki.svg" alt="">
+                    <p class="swiper-text">I like an interior that defies labeling. I don't really want someone to walk into a room and know that I did it</p>
+                    <p class="swiper-author">ARTEM MELMAN</p>
+                  </div>
+                  <div class="swiper-slide">
+                    <h2 class="title title__slide">What our Customers says...</h2>
+                    <img src="img/kovicki.svg" alt="">
+                    <p class="swiper-text">I like an interior that defies labeling. I don't really want someone to walk into a room and know that I did it</p>
+                    <p class="swiper-author">MELMAN ARTEM</p>
+                  </div>
+                  <div class="swiper-slide">
+                    <h2 class="title title__slide">What our Customers says...</h2>
+                    <img src="img/kovicki.svg" alt="">
+                    <p class="swiper-text">I like an interior that defies labeling. I don't really want someone to walk into a room and know that I did it</p>
+                    <p class="swiper-author">ARTEM WILGELMOVICH</p>
+                  </div>
+                  <div class="swiper-slide">
+                    <h2 class="title title__slide">What our Customers says...</h2>
+                    <img src="img/kovicki.svg" alt="">
+                    <p class="swiper-text">I like an interior that defies labeling. I don't really want someone to walk into a room and know that I did it</p>
+                    <p class="swiper-author">BENNY BENASSI</p>
+                  </div>
+                  <div class="swiper-slide">
+                    <h2 class="title title__slide">What our Customers says...</h2>
+                    <img src="img/kovicki.svg" alt="">
+                    <p class="swiper-text">I like an interior that defies labeling. I don't really want someone to walk into a room and know that I did it</p>
+                    <p class="swiper-author">JAKY CHAN</p>
+                  </div>
+                  <div class="swiper-slide">
+                    <h2 class="title title__slide">What our Customers says...</h2>
+                    <img src="img/kovicki.svg" alt="">
+                    <p class="swiper-text">I like an interior that defies labeling. I don't really want someone to walk into a room and know that I did it</p>
+                    <p class="swiper-author">DONALD DUCK</p>
+                  </div>
+                  <div class="swiper-slide">
+                    <h2 class="title title__slide">What our Customers says...</h2>
+                    <img src="img/kovicki.svg" alt="">
+                    <p class="swiper-text">I like an interior that defies labeling. I don't really want someone to walk into a room and know that I did it</p>
+                    <p class="swiper-author">MIKKY MOUSE</p>
+                  </div>
+                  <div class="swiper-slide">
+                    <h2 class="title title__slide">What our Customers says...</h2>
+                    <img src="img/kovicki.svg" alt="">
+                    <p class="swiper-text">I like an interior that defies labeling. I don't really want someone to walk into a room and know that I did it</p>
+                    <p class="swiper-author">BUCKS BUNNY</p>
+                  </div>
                 </div>
                 <div class="swiper-button-next"></div>
                 <div class="swiper-button-prev"></div>
             </div>
         </div>
     </section>
-
+    <section class="brands__section">
+        <div class="container">
+            <div class="brands">
+                <img class="brands__item" src="img/brand1.svg" alt="">
+                <img class="brands__item" src="img/brand2.svg" alt="">
+                <img class="brands__item" src="img/brand3.svg" alt="">
+                <img class="brands__item" src="img/brand4.svg" alt="">
+                <img class="brands__item" src="img/brand5.svg" alt="">
+            </div>
+        </div>
+    </section>
     <footer class="bg">
         <div class="container">
             <div class="footer">
@@ -87,7 +140,6 @@
             </div>
         </div> 
     </footer>
-
     <div class="overlay" id="overlay">
         <div class="modal-search">
             <div class="container">
