--- a/index.html
+++ b/index.html
@@ -126,6 +126,28 @@
             </div>
         </div>
     </section>
+    <section class="stats__section">
+        <div class="container">
+            <ul class="stats__list">
+                <li class="stats__item">
+                    <h1 class="hero__title stats__title">25</h1>
+                    <p class="hero__text">Years Of Experiance</p>
+                </li>
+                <li class="stats__item">
+                    <h1 class="hero__title stats__title">04</h1>
+                    <p class="hero__text">Success Project</p>
+                </li>
+                <li class="stats__item">
+                    <h1 class="hero__title stats__title">19</h1>
+                    <p class="hero__text">Active Project</p>
+                </li>
+                <li class="stats__item">
+                    <h1 class="hero__title stats__title">91</h1>
+                    <p class="hero__text">Happy Customers</p>
+                </li>
+            </ul>
+        </div>
+    </section>
     <footer class="bg">
         <div class="container">
             <div class="footer">
