--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <img class="hero__img" src="img/bg.jpg" alt="">
             <div class="container">
                <h1 class="hero__title">Let Your Home <br> Be Unique</h1>
-               <p class="hero__text">There are many variations of the passages of lorem Ipsum fromavailable,variations of the passages.</p>
+               <p class="text">There are many variations of the passages of lorem Ipsum fromavailable,variations of the passages.</p>
             </div>
         </div>
     </section>
@@ -40,7 +40,7 @@
             <div class="about">
                 <div class="about__box">
                     <h2 class="title">We Create The Art Of Stylish Living Stylishly</h2>
-                    <p>It is a long established fact that a reader will be distracted by the of readable content of a page 
+                    <p class="text">It is a long established fact that a reader will be distracted by the of readable content of a page 
                         when lookings at its layouts the points of using 
                         that it has a more-or-less normal.</p>
                     <div class="about__tel">
@@ -144,6 +144,44 @@
                 <li class="stats__item">
                     <h1 class="hero__title stats__title">91</h1>
                     <p class="hero__text">Happy Customers</p>
+                </li>
+            </ul>
+        </div>
+    </section>
+    <section class="articles__section">
+        <div class="container">
+            <div class="title title__articles">Articles & News</div>
+            <p class="text articles__text">It is a long established fact that a reader will be distracted by the of readable content of a page when lookings at its layouts the points of using.</p>
+            <ul class="articles">
+                <li class="articles__item">
+                    <img class="articles__img" src="img/articles1.jpg" alt="">
+                    <h3 class="articles__title">Let’s Get Solution For Building Construction Work</h3>
+                    <div class="articles__info">
+                        <span class="articles__date">26 December,2022 </span>
+                        <a class="articles__link" href="#">
+                            <img src="img/articlesarrow.svg" alt="">
+                        </a>
+                    </div>
+                </li>
+                <li class="articles__item">
+                    <img class="articles__img" src="img/articles2.jpg" alt="">
+                    <h3 class="articles__title">Let’s Get Solution For Building Construction Work</h3>
+                    <div class="articles__info">
+                        <span class="articles__date">26 December,2022 </span>
+                        <a class="articles__link" href="#">
+                            <img src="img/articlesarrow.svg" alt="">
+                        </a>
+                    </div>
+                </li>
+                <li class="articles__item">
+                    <img class="articles__img" src="img/articles3.jpg" alt="">
+                    <h3 class="articles__title">Let’s Get Solution For Building Construction Work</h3>
+                    <div class="articles__info">
+                        <span class="articles__date">26 December,2022 </span>
+                        <a class="articles__link" href="#">
+                            <img src="img/articlesarrow.svg" alt="">
+                        </a>
+                    </div>
                 </li>
             </ul>
         </div>
