--- a/index.html
+++ b/index.html
@@ -150,40 +150,51 @@
     </section>
     <section class="articles__section">
         <div class="container">
-            <div class="title title__articles">Articles & News</div>
+            <h2 class="title title__articles">Articles & News</h2>
             <p class="text articles__text">It is a long established fact that a reader will be distracted by the of readable content of a page when lookings at its layouts the points of using.</p>
-            <ul class="articles">
-                <li class="articles__item">
-                    <img class="articles__img" src="img/articles1.jpg" alt="">
+            <div class="articles">
+                <article class="articles__item">
+                    <div class="articles__thumb">
+                        <img class="articles__img" src="img/articles1.jpg" alt="">
+                        <span class="articles__tag">Kitchan Design</span>
+                    </div>
                     <h3 class="articles__title">Let’s Get Solution For Building Construction Work</h3>
                     <div class="articles__info">
-                        <span class="articles__date">26 December,2022 </span>
+                        <span class="articles__date">26 December, 2022 </span>
                         <a class="articles__link" href="#">
                             <img src="img/articlesarrow.svg" alt="">
                         </a>
                     </div>
-                </li>
-                <li class="articles__item">
-                    <img class="articles__img" src="img/articles2.jpg" alt="">
-                    <h3 class="articles__title">Let’s Get Solution For Building Construction Work</h3>
+                </article>
+                <article class="articles__item">
+                    <div class="articles__thumb">
+                        <img class="articles__img" src="img/articles2.jpg" alt="">
+                        <span class="articles__tag">Living Design</span>
+                    </div>
+                    <h3 class="articles__title">Low Cost Latest Invented Interior Designing <br>
+                        Ideas.</h3>
                     <div class="articles__info">
-                        <span class="articles__date">26 December,2022 </span>
+                        <span class="articles__date">25 April, 2023 </span>
+                        <a class="articles__link" href="#">
+                            <img src="img/whitearticlesarrow.svg" alt="">
+                        </a>
+                    </div>
+                </article>
+                <article class="articles__item">
+                    <div class="articles__thumb">
+                        <img class="articles__img" src="img/articles3.jpg" alt="">
+                        <span class="articles__tag">Interior Design</span>
+                    </div>
+                    <h3 class="articles__title">Best For Any Office & Business Interior <br>
+                        Solution</h3>
+                    <div class="articles__info">
+                        <span class="articles__date">15 Oktober, 2023 </span>
                         <a class="articles__link" href="#">
                             <img src="img/articlesarrow.svg" alt="">
                         </a>
                     </div>
-                </li>
-                <li class="articles__item">
-                    <img class="articles__img" src="img/articles3.jpg" alt="">
-                    <h3 class="articles__title">Let’s Get Solution For Building Construction Work</h3>
-                    <div class="articles__info">
-                        <span class="articles__date">26 December,2022 </span>
-                        <a class="articles__link" href="#">
-                            <img src="img/articlesarrow.svg" alt="">
-                        </a>
-                    </div>
-                </li>
-            </ul>
+                </article>
+            </div>
         </div>
     </section>
     <footer class="bg">
