--- a/index.html
+++ b/index.html
@@ -197,6 +197,30 @@
             </div>
         </div>
     </section>
+    <section class="subscribe__section">
+        <div class="container">
+            <div class="suscribe">
+                <h2 class="title">Personally Newsletter</h2>
+                <p class="text">A bi-weekly newsletter of design inspiration.</p>
+                <div class="subscribe_box">
+                    <input type="email">
+                    <button type="submit"></button>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="contact__section">
+        <div class="container">
+            <form action="">
+                <input class="contact-form__input" type="text">
+                <input class="contact-form__input" type="email">
+                <textarea class="contact-form__textarea" name="" id="" cols="30" rows="10"></textarea>
+                <div class="contact-form__btn">
+                    <button type="submit"></button>
+                </div>
+            </form>
+        </div>
+    </section>
     <footer class="bg">
         <div class="container">
             <div class="footer">
