--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                     <h2 class="title title__slide">What our Customers says...</h2>
                     <img src="img/kovicki.svg" alt="">
                     <p class="swiper-text">I like an interior that defies labeling. I don't really want someone to walk into a room and know that I did it</p>
-                    <p class="swiper-author">BUNNY WILLIAMS</p>
+                    <p class="swiper-author">LESYA KOHANSKAYA</p>
                   </div>
                   <div class="swiper-slide">
                     <h2 class="title title__slide">What our Customers says...</h2>
