--- a/details.html
+++ b/details.html
@@ -26,16 +26,9 @@
             </div>
         </div>
     </header>
-    <section class="blog__bg">
+    <section class="details__bg">
         <div class="thumb">
-            <img class="thumb__img" src="img/blogbg.jpg" alt="">
-            <div class="thumb__info">
-                <h2 class="title title__blog">Articles & News</h2>
-                <ul class="breadcrumbs">
-                    <li><a href="https://vk.com/artem_melman">Home</a></li>
-                    <li><a href="#">Blog</a></li>
-                </ul>
-            </div>
+            <img class="thumb__img" src="img/detailsbg.jpg" alt="">
         </div>
     </section>
     <footer class="bg">
