--- a/blog.html
+++ b/blog.html
@@ -38,6 +38,128 @@
             </div>
         </div>
     </section>
+    <div class="page">
+        <div class="container">
+            <section class="article-man">
+                <h2 class="title">Latest Post</h2>
+                <article class="article-main__item">
+                    <div class="article-main__thumb">
+                        <img class="article-main__img" src="img/article-img.jpg" alt="">
+                    </div>
+                    <div class="article-main__content">
+                        <h3 class="article-main__title">
+                            Low Cost Latest Invented Interior Designing Ideas
+                        </h3>
+                        <p>
+                            Lorem ipsum dolor sit amet, adipiscing Aliquam eu sem vitae turpis dignissim maximus.posuere in.Contrary to popular belief.
+                        </p>
+                        <p> 
+                            Lorem Ipsum is not simply random text. It has roots in a piece of classica.
+                        </p>
+                        <div class="article-main__info">
+                            <span class="articles__date">25 April, 2023 </span>
+                            <a class="articles__link" href="#">
+                                <img src="img/articlesarrow.svg" alt="">
+                            </a>
+                        </div>
+                    </div>
+                </article>
+            </section>
+            <section class="article">
+                <h2 class="title">Articles & News</h2>
+                <div class="articles">
+                    <article class="articles__item">
+                        <div class="articles__thumb">
+                            <img class="articles__img" src="img/articles1.jpg" alt="">
+                            <span class="articles__tag">Kitchan Design</span>
+                        </div>
+                        <h3 class="articles__title">Let’s Get Solution For Building Construction Work</h3>
+                        <div class="articles__info">
+                            <span class="articles__date">26 December, 2022 </span>
+                            <a class="articles__link" href="#">
+                                <img src="img/articlesarrow.svg" alt="">
+                            </a>
+                        </div>
+                    </article>
+                    <article class="articles__item">
+                        <div class="articles__thumb">
+                            <img class="articles__img" src="img/articles2.jpg" alt="">
+                            <span class="articles__tag">Living Design</span>
+                        </div>
+                        <h3 class="articles__title">Low Cost Latest Invented Interior Designing <br>
+                            Ideas.</h3>
+                        <div class="articles__info">
+                            <span class="articles__date">25 April, 2023 </span>
+                            <a class="articles__link" href="#">
+                                <img src="img/whitearticlesarrow.svg" alt="">
+                            </a>
+                        </div>
+                    </article>
+                    <article class="articles__item">
+                        <div class="articles__thumb">
+                            <img class="articles__img" src="img/articles3.jpg" alt="">
+                            <span class="articles__tag">Interior Design</span>
+                        </div>
+                        <h3 class="articles__title">Best For Any Office & Business Interior <br>
+                            Solution</h3>
+                        <div class="articles__info">
+                            <span class="articles__date">15 Oktober, 2023 </span>
+                            <a class="articles__link" href="#">
+                                <img src="img/articlesarrow.svg" alt="">
+                            </a>
+                        </div>
+                    </article>
+                    <article class="articles__item">
+                        <div class="articles__thumb">
+                            <img class="articles__img" src="img/articles4.jpg" alt="">
+                            <span class="articles__tag">Kitchan Design</span>
+                        </div>
+                        <h3 class="articles__title">Let’s Get Solution For Building Construction Work</h3>
+                        <div class="articles__info">
+                            <span class="articles__date">26 December, 2022 </span>
+                            <a class="articles__link" href="#">
+                                <img src="img/articlesarrow.svg" alt="">
+                            </a>
+                        </div>
+                    </article>
+                    <article class="articles__item">
+                        <div class="articles__thumb">
+                            <img class="articles__img" src="img/articles5.jpg" alt="">
+                            <span class="articles__tag">Living Design</span>
+                        </div>
+                        <h3 class="articles__title">Low Cost Latest Invented Interior Designing <br>
+                            Ideas.</h3>
+                        <div class="articles__info">
+                            <span class="articles__date">25 April, 2023 </span>
+                            <a class="articles__link" href="#">
+                                <img src="img/articlesarrow.svg" alt="">
+                            </a>
+                        </div>
+                    </article>
+                    <article class="articles__item">
+                        <div class="articles__thumb">
+                            <img class="articles__img" src="img/articles6.jpg" alt="">
+                            <span class="articles__tag">Interior Design</span>
+                        </div>
+                        <h3 class="articles__title">Best For Any Office & Business Interior <br>
+                            Solution</h3>
+                        <div class="articles__info">
+                            <span class="articles__date">15 Oktober, 2023 </span>
+                            <a class="articles__link" href="#">
+                                <img src="img/articlesarrow.svg" alt="">
+                            </a>
+                        </div>
+                    </article>
+                </div>
+                <ul class="pagination">
+                    <li><span class="pagination1"></span></li>
+                    <li><a class="pagination__link-1" href=""></a></li>
+                    <li><a class="pagination__link-2" href=""></a></li>
+                    <li><a class="pagination__link-3" href=""></a></li>
+                </ul>
+            </section>
+        </div>
+    </div>
     <footer class="bg">
         <div class="container">
             <div class="footer">
