--- a/blog.html
+++ b/blog.html
@@ -40,7 +40,7 @@
     </section>
     <div class="page">
         <div class="container">
-            <section class="article-man">
+            <section class="article-main">
                 <h2 class="title">Latest Post</h2>
                 <article class="article-main__item">
                     <div class="article-main__thumb">
@@ -48,19 +48,14 @@
                     </div>
                     <div class="article-main__content">
                         <h3 class="article-main__title">
-                            Low Cost Latest Invented Interior Designing Ideas
+                            <a href="#">Low Cost Latest Invented Interior Designing Ideas</a>
                         </h3>
                         <p>
-                            Lorem ipsum dolor sit amet, adipiscing Aliquam eu sem vitae turpis dignissim maximus.posuere in.Contrary to popular belief.
-                        </p>
-                        <p> 
-                            Lorem Ipsum is not simply random text. It has roots in a piece of classica.
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt, laudantium consectetur! Et laudantium recusandae quae facilis fuga vitae hic, doloremque maiores ipsum maxime animi non porro beatae. Eum, itaque ut!
                         </p>
                         <div class="article-main__info">
-                            <span class="articles__date">25 April, 2023 </span>
-                            <a class="articles__link" href="#">
-                                <img src="img/articlesarrow.svg" alt="">
-                            </a>
+                            <span class="articles-main__date">25 April, 2023 </span>
+                            <a class="article-main__link" href="#"></a>
                         </div>
                     </div>
                 </article>
@@ -73,12 +68,10 @@
                             <img class="articles__img" src="img/articles1.jpg" alt="">
                             <span class="articles__tag">Kitchan Design</span>
                         </div>
-                        <h3 class="articles__title">Let’s Get Solution For Building Construction Work</h3>
-                        <div class="articles__info">
-                            <span class="articles__date">26 December, 2022 </span>
-                            <a class="articles__link" href="#">
-                                <img src="img/articlesarrow.svg" alt="">
-                            </a>
+                        <h3 class="articles__title">Let’s Get Solution For <br> Building Construction Work</h3>
+                        <div class="article-main__info">
+                            <span class="articles-main__date">25 April, 2023 </span>
+                            <a class="article-main__link" href="#"></a>
                         </div>
                     </article>
                     <article class="articles__item">
@@ -86,13 +79,11 @@
                             <img class="articles__img" src="img/articles2.jpg" alt="">
                             <span class="articles__tag">Living Design</span>
                         </div>
-                        <h3 class="articles__title">Low Cost Latest Invented Interior Designing <br>
+                        <h3 class="articles__title">Low Cost Latest Invented <br> Interior Designing <br>
                             Ideas.</h3>
-                        <div class="articles__info">
-                            <span class="articles__date">25 April, 2023 </span>
-                            <a class="articles__link" href="#">
-                                <img src="img/whitearticlesarrow.svg" alt="">
-                            </a>
+                        <div class="article-main__info">
+                            <span class="articles-main__date">25 April, 2023 </span>
+                            <a class="article-main__link" href="#"></a>
                         </div>
                     </article>
                     <article class="articles__item">
@@ -100,13 +91,11 @@
                             <img class="articles__img" src="img/articles3.jpg" alt="">
                             <span class="articles__tag">Interior Design</span>
                         </div>
-                        <h3 class="articles__title">Best For Any Office & Business Interior <br>
+                        <h3 class="articles__title">Best For Any Office & <br> Business Interior <br>
                             Solution</h3>
-                        <div class="articles__info">
-                            <span class="articles__date">15 Oktober, 2023 </span>
-                            <a class="articles__link" href="#">
-                                <img src="img/articlesarrow.svg" alt="">
-                            </a>
+                        <div class="article-main__info">
+                            <span class="articles-main__date">25 April, 2023 </span>
+                            <a class="article-main__link" href="#"></a>
                         </div>
                     </article>
                     <article class="articles__item">
@@ -114,12 +103,10 @@
                             <img class="articles__img" src="img/articles4.jpg" alt="">
                             <span class="articles__tag">Kitchan Design</span>
                         </div>
-                        <h3 class="articles__title">Let’s Get Solution For Building Construction Work</h3>
-                        <div class="articles__info">
-                            <span class="articles__date">26 December, 2022 </span>
-                            <a class="articles__link" href="#">
-                                <img src="img/articlesarrow.svg" alt="">
-                            </a>
+                        <h3 class="articles__title">Let’s Get Solution For <br> Building Construction Work</h3>
+                        <div class="article-main__info">
+                            <span class="articles-main__date">25 April, 2023 </span>
+                            <a class="article-main__link" href="#"></a>
                         </div>
                     </article>
                     <article class="articles__item">
@@ -127,13 +114,11 @@
                             <img class="articles__img" src="img/articles5.jpg" alt="">
                             <span class="articles__tag">Living Design</span>
                         </div>
-                        <h3 class="articles__title">Low Cost Latest Invented Interior Designing <br>
+                        <h3 class="articles__title">Low Cost Latest Invented <br> Interior Designing <br>
                             Ideas.</h3>
-                        <div class="articles__info">
-                            <span class="articles__date">25 April, 2023 </span>
-                            <a class="articles__link" href="#">
-                                <img src="img/articlesarrow.svg" alt="">
-                            </a>
+                        <div class="article-main__info">
+                            <span class="articles-main__date">25 April, 2023 </span>
+                            <a class="article-main__link" href="#"></a>
                         </div>
                     </article>
                     <article class="articles__item">
@@ -141,21 +126,19 @@
                             <img class="articles__img" src="img/articles6.jpg" alt="">
                             <span class="articles__tag">Interior Design</span>
                         </div>
-                        <h3 class="articles__title">Best For Any Office & Business Interior <br>
+                        <h3 class="articles__title">Best For Any Office & <br> Business Interior <br>
                             Solution</h3>
-                        <div class="articles__info">
-                            <span class="articles__date">15 Oktober, 2023 </span>
-                            <a class="articles__link" href="#">
-                                <img src="img/articlesarrow.svg" alt="">
-                            </a>
+                       <div class="article-main__info">
+                            <span class="articles-main__date">25 April, 2023 </span>
+                            <a class="article-main__link" href="#"></a>
                         </div>
                     </article>
                 </div>
                 <ul class="pagination">
-                    <li><span class="pagination1"></span></li>
-                    <li><a class="pagination__link-1" href=""></a></li>
-                    <li><a class="pagination__link-2" href=""></a></li>
-                    <li><a class="pagination__link-3" href=""></a></li>
+                    <li><span>01</span></li>
+                    <li><a href="#">02</a></li>
+                    <li><a href="#">03</a></li>
+                    <li><a class="pagination-next" href="#"></a></li>
                 </ul>
             </section>
         </div>
