--- a/index.html
+++ b/index.html
@@ -158,12 +158,12 @@
                         <img class="articles__img" src="img/articles1.jpg" alt="">
                         <span class="articles__tag">Kitchan Design</span>
                     </div>
-                    <h3 class="articles__title">Let’s Get Solution For Building Construction Work</h3>
+                    <h3 class="articles__title">
+                        <a href="#">Let’s Get Solution For <br> Building Construction Work</a>
+                    </h3>
                     <div class="articles__info">
                         <span class="articles__date">26 December, 2022 </span>
-                        <a class="articles__link" href="#">
-                            <img src="img/articlesarrow.svg" alt="">
-                        </a>
+                        <a class="articles__link" href="#"></a>
                     </div>
                 </article>
                 <article class="articles__item">
@@ -171,13 +171,12 @@
                         <img class="articles__img" src="img/articles2.jpg" alt="">
                         <span class="articles__tag">Living Design</span>
                     </div>
-                    <h3 class="articles__title">Low Cost Latest Invented Interior Designing <br>
-                        Ideas.</h3>
+                    <h3 class="articles__title">
+                        <a href="#">Low Cost Latest Invented <br> Interior Designing <br> Ideas.</a>
+                    </h3>
                     <div class="articles__info">
                         <span class="articles__date">25 April, 2023 </span>
-                        <a class="articles__link" href="#">
-                            <img src="img/whitearticlesarrow.svg" alt="">
-                        </a>
+                        <a class="articles__link" href="#"></a>
                     </div>
                 </article>
                 <article class="articles__item">
@@ -185,13 +184,12 @@
                         <img class="articles__img" src="img/articles3.jpg" alt="">
                         <span class="articles__tag">Interior Design</span>
                     </div>
-                    <h3 class="articles__title">Best For Any Office & Business Interior <br>
-                        Solution</h3>
+                    <h3 class="articles__title">
+                        <a href="#">Best For Any Office <br> & Business Interior Solution</a>
+                    </h3>
                     <div class="articles__info">
                         <span class="articles__date">15 Oktober, 2023 </span>
-                        <a class="articles__link" href="#">
-                            <img src="img/articlesarrow.svg" alt="">
-                        </a>
+                        <a class="articles__link" href="#"></a>
                     </div>
                 </article>
             </div>
