--- a/blog.html
+++ b/blog.html
@@ -38,7 +38,7 @@
             </div>
         </div>
     </section>
-    <div class="page">
+    <div class="page-article">
         <div class="container">
             <section class="article-main">
                 <h2 class="title">Latest Post</h2>
