--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                     <img class="about__img" src="img/about-img.jpg" alt="">
                 </div>
             </div>
-            <div class="swiper swiperFeedback">
+            <div class="swiper swiper-feedback">
                 <div class="swiper-wrapper">
                   <div class="swiper-slide">
                     <h2 class="title title__slide">What our Customers says...</h2>
